--- a/wwwroot/css/distination.css
+++ b/wwwroot/css/distination.css
@@ -21,12 +21,16 @@ body, html {
     overflow: hidden;
     border-radius: 10px;
     margin-top: 20px;
+   
 }
 
 .main-slide {
     display: none;
     position: relative;
-    margin-top:20px;
+    margin-top: 20px;
+    padding-top: 30px;
+    padding-right: 12px;
+    padding-left: 12px;
 }
 
     .main-slide img {
@@ -134,7 +138,7 @@ body, html {
     position: sticky;
     top: 60px;
     z-index: 1000;
-    margin-top: 80px;
+    margin-top: 30px;
 }
 
     .navbar2 a {
@@ -856,4 +860,10 @@ section {
 
 .like-count {
     display: inline-block; /* Ensure it is displayed inline */
+}
+
+.card-img-top img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
 }
