add footer to privacy page

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -46,7 +46,7 @@
 
 
                         <div class="btn" >
-                            <button type="submit">ثبت نام </button>
+                            <button class="register-btn" type="submit">ثبت نام </button>
                         </div>
                 </form>
 
