--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -39,7 +39,7 @@
                             <input class="form-check-input" asp-for="RememberMe" /> @Html.DisplayNameFor(model => model.RememberMe)
                         </label>
                     </div>
-                    <div class="btn"><button type="submit">Login</button></div>
+                    <div class="btn"><button class="login-btn" type="submit">Login</button></div>
                 </form>
 
             </div>
