--- a/wwwroot/css/distination.css
+++ b/wwwroot/css/distination.css
@@ -230,9 +230,9 @@ div.desc {
     background: #f9f2f2;
     display: flex;
     flex-wrap: wrap;
-    /*flex-direction: column;
+    flex-direction: column;
   align-items: center;
-  min-height: 120vh;*/
+ /* min-height: 120vh;*/
     justify-content: center;
     gap: 20px;
     position: relative;
@@ -254,7 +254,7 @@ div.desc {
 @import "https://unpkg.com/open-props/normalize.min.css";
 
 body {
-    display: grid;
+    /*display: grid;*/
      min-height: 100vh;
     background: var(--gradient-9);
 }
