--- a/wwwroot/css/home.css
+++ b/wwwroot/css/home.css
@@ -220,7 +220,7 @@ div img:hover {
 .pic-button {
     background-color: rgba(0, 0, 0, 0.6);
     color: white;
-    font-size: 18px;
+    font-size: 12px;
     font-weight: bold;
     border: none;
     padding: 10px 20px;
@@ -414,15 +414,15 @@ div img:hover {
 .navbar .dropdown-content {
     display: none; /* پیش‌فرض پنهان بودن منو */
     position: absolute;
-    background-color: #faad95;
-    min-width: 160px;
+    /*background-color: #faad95;
+    min-width: 160px;*/
     z-index: 1;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
     .navbar .dropdown-content a {
         color: #000;
-        padding: 12px 16px;
+        /*padding: 12px 16px;*/
         text-decoration: none;
         display: block;
         text-align: right;
@@ -500,4 +500,28 @@ div img:hover {
     width:100%;
     height:200px;
     object-fit:cover;
+}
+
+
+
+.header-content input[type="submit"] {
+    padding: 10px 20px;
+    background-color: #faad95;
+    border: none;
+    border-radius: 25px;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    position: relative;
+    right: 5px;
+}
+
+.search-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 600px;
+    margin: 0 auto;
 }
