--- a/wwwroot/css/login-register.css
+++ b/wwwroot/css/login-register.css
@@ -6,7 +6,7 @@ body{
 	min-height:550px;
 	background-position:center;
 	position:relative;
-    overflow-y: hidden;
+    /*overflow-y: hidden;*/
     text-align: right;
     justify-content: center;
     align-items: center; 
@@ -71,7 +71,7 @@ h2{
 
 .white-panel{
     background-color: rgba(255,255, 255, 1);
-    height:450px;
+    height:auto;
     position:absolute;
     top:-50px;
     width:50%;
