--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -92,9 +92,9 @@
             }
             <div class="description-container des-con1">
                 <h3>ایران سرزمین ماندگار</h3>
-                <p>کدوم استان سفر کنم؟</p>
+                <p class="p-Gray"> به کدام استان ایران سفر کنم؟</p>
 
-                <p>  اگر هنوز مقصد شما برای تعطیلات مشخص نیست نگران نباشید لیستی از استان های ایران را اینجا میتئانید ببینید . با کلیک روی هر کدام جاذبه ای آن استانوهتل ها و رستئران های آن را شاهده میکنید و بهتر میتوانید تصمیم بگیرید به کدام شهر سفر کنید  
+                <p>  اگر هنوز مقصد شما برای تعطیلات مشخص نیست نگران نباشید لیستی از استان های ایران را اینجا میتوانید ببینید . با کلیک روی هر کدام جاذبه ای آن استان وهتل ها و رستوران های آن را شاهده میکنید و بهتر میتوانید تصمیم بگیرید به کدام شهر سفر کنید  
 
                 </p>
             </div>
@@ -105,8 +105,8 @@
         <div class="divattraction">
             <div class="description-container des-con2">
                 <h3>جاذبه گرد</h3>
-                <p>کدوم استان سفر کنم؟</p>
-                <p>اگر مقصد شما بری سفر به یکی از استان های ایران جان مشخص شده ولی هنوز نمیدانید برای برنامه سفر خود به کدام جاذبه یا مکان تفریحی آن استان سفر کنید نگران نباسنبشاید <br />    .</p> </div>
+                <p class="p-Gray">به کدام جاذبه سفر کنم؟</p>
+                <p>اگر مقصد شما بری سفر به یکی از استان های ایران  مشخص شده ولی هنوز نمی دانید برای برنامه سفر خود به کدام جاذبه یا مکان تفریحی آن استان سفر کنید نگران نباشید <br />    .</p> </div>
 
             @for (int i = 0; i < 3; i++)
             {
