--- a/wwwroot/css/login-register.css
+++ b/wwwroot/css/login-register.css
@@ -72,6 +72,7 @@ h2{
 .white-panel{
     background-color: rgba(255,255, 255, 1);
     height:auto;
+    min-height:500px;
     position:absolute;
     top:-50px;
     width:50%;
