--- a/wwwroot/css/distination.css
+++ b/wwwroot/css/distination.css
@@ -247,7 +247,9 @@ div.desc {
     }
 
     #gallery .gallery-item {
-        flex: 1 1 calc(25% - 20px);
+        /*flex: 1 1 calc(25% - 20px);*/
+        width: 20%;
+        height: 350px;
     }
 
 @import "https://unpkg.com/open-props";
@@ -278,7 +280,7 @@ body {
 
 .gallery-item {
     position: relative;
-    flex: 1;
+    /*flex: 1;*/
     overflow: hidden;
 }
 
